<resources>
    <string name="app_name">AppNevera</string>
    <string name="Correo">Correo</string>
    <string name="NomUsuario">Nombre Usuario</string>
    <string name="Pass">Contraseña</string>
    <string name="Pass2">Repetir Contraseña</string>
    <string name="BtnIngresar">Iniciar Sesion</string>
    <string name="BtnAceptar">Aceptar</string>
    <string name="BtnCalcelar">Volver</string>
    <string name="Btnservir">Servir</string>
    <string name="title_activity_refrescos">Refrescos</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_bebida">Bebida</string>

    <string name="InTemp">Ingresar Temperatura ambiente</string>
    <string name="InTempNev">Ingresar Temperatura de la nevera</string>
</resources>