<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearCuenta">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/IDcorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/committee_chair_icon" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/IDcorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="@string/Correo"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/IDnombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/IDnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="@string/NomUsuario"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/Idpass"
        app:layout_constraintStart_toStartOf="@+id/IDcorreo"
        app:layout_constraintTop_toBottomOf="@+id/IDcorreo" />

    <EditText
        android:id="@+id/Idpass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="293dp"
        android:ems="10"
        android:hint="@string/Pass2"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Idpass"
        app:layout_constraintTop_toBottomOf="@+id/Idpass" />

    <EditText
        android:id="@+id/Idpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="@string/Pass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/Idpass2"
        app:layout_constraintStart_toStartOf="@+id/IDnombre"
        app:layout_constraintTop_toBottomOf="@+id/IDnombre" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:hint="@string/BtnAceptar"
        android:onClick="CrearUser"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button7" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="125dp"
        android:hint="@string/BtnCalcelar"
        android:onClick="volver"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>